# one-stop-finance

./: .env.example  .gitignore  Makefile  README.md  architecture.md  docker-compose.prod.yml  docker-compose.yml  plan.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 7452ffddfa65_initial_schema.py
backend/app/: celery_app.py  config.py  database.py  main.py  redis.py
backend/app/core/: dependencies.py  exceptions.py  feature_flags.py  response.py  security.py
backend/app/features/auth/: router.py
backend/app/features/billing/: router.py
backend/app/features/insiders/: repository.py  router.py  service.py
backend/app/features/onchain_prediction/: router.py  service.py
backend/app/features/options/: router.py
backend/app/features/public/: router.py  service.py
backend/app/features/realtime/: router.py
backend/app/features/search/: router.py
backend/app/features/sentiment/: router.py
backend/app/features/themes/: repository.py  router.py
backend/app/features/trend/: router.py
backend/app/integrations/: news_client.py  polygon.py  sec_edgar.py  yfinance_client.py
backend/app/ml/features/: chain_features.py
backend/app/models/: __init__.py  base.py  insider.py  subscription.py  theme.py  ticker.py  user.py
backend/app/workers/: insider_data.py  market_indices.py  options_data.py  realtime_push.py  sentiment.py  theme_intelligence.py  trend_signals.py
backend/scripts/: seed_themes.py
backend/tests/: test_health.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx  Topbar.tsx
frontend/src/config/: feature-flags.ts
frontend/src/lib/: api-client.ts  query-client.ts  utils.ts
frontend/src/pages/: DashboardPage.tsx  InsidersPage.tsx  LandingPage.tsx  LoginPage.tsx  OptionsPage.tsx  RegisterPage.tsx  SearchPage.tsx  SentimentPage.tsx  ThemesPage.tsx  TrendPage.tsx  UpgradePage.tsx
frontend/src/stores/: auth.store.ts  realtime.store.ts
frontend/src/types/: index.ts
(+8 files in other folders)
